# research-projects

./: .gitignore  README.md  UPLOAD_MANIFEST.md
agentflow/: .gitignore  README.md  pyproject.toml
agentflow/agentflow/: __init__.py  agent.py  airline_skill.py  graph.py  memory.py  planner.py  react_airline_skill_planner.py  react_guarded_planner.py  react_light_memory_reflection_planner.py  react_memory_reflection_planner.py  react_planner.py  react_step_control_planner.py  readme.txt  reflection.py  state.py  tau2_adapter.py  tool_registry.py
agentflow/docs/: AgentFlow_airline_experiment_showcase.md  AgentFlow_airline_experiment_showcase_zh.md  AgentFlow_baseline_technical_report.md
agentflow/examples/: run_tau2_batch.py  run_tau2_single.py
lora-gsm8k/: .gitignore  README.md
lora-gsm8k/benchmarks/gsm8k/: dpo_lora_boundary_full1500.summary.json  dpo_lora_k5_hard_medium_full1500.summary.json  dpo_lora_stable_full1500.summary.json  dpo_lora_wrong_vs_gold_train1500.summary.json  dpo_lora_wrong_vs_gold_train_partial.summary.json
lora-gsm8k/results/gsm8k/all/: qwen25_05b_base_gsm8k_eval_all.summary.json  qwen25_05b_gsm8k_lora_eval_all.summary.json  (+5 more)
lora-gsm8k/scripts/: build_gsm8k_boundary_dpo_pairs.py  build_gsm8k_dpo_pairs.py  build_gsm8k_k5_dpo_pairs.py  build_gsm8k_stable_dpo_pairs.py  download_gsm8k.py  eval_gsm8k_qwen.py  generate_gsm8k_candidates_batch.py  train_gsm8k_dpo_boundary_anchor.py  train_gsm8k_dpo_lora.py  train_gsm8k_dpo_mixed_replay.py  train_gsm8k_dpo_stable_anchor.py  train_gsm8k_lora.py
